@@ -1,5 +1,12 @@
 2006-02-09  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/component.py:
+	* kiwi/interfaces.py:
+	* tests/test_component.py:
+	Add a very basic component system, based on code by Ali Asfhar
+
+2006-02-09  Johan Dahlin  <jdahlin@async.com.br>
+
 	* tests/test_argcheck.py: 100% coverage here
 
 	* kiwi/argcheck.py: Remove tests, they're in tests/ now
